--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -36,7 +36,7 @@
 
 .comingsoon {
   background-image: url(../assets/comingsoon.png);
-  background-size: contain;
+  background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -409,7 +409,7 @@
 .triangle,
 .triangle:before,
 .triangle:after {
-  @apply sm:w-[1.3em] sm:h-[1.3em] w-[2.1vh] h-[2.1vh];
+  @apply sm:w-[1.3em] sm:h-[1.3em] w-[4vw] h-[4vw];
   border-top-right-radius: 40%;
 }
 .triangle {
@@ -658,7 +658,7 @@
   padding-bottom: 8px;
   padding-left: 16px;
   border-radius: 6px;
-  color: #ff651e;
+  color: #ff5100;
 }
 
 .selectedHover2 {
